# sentryrca

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: agent-step.md  eval-case.md  git-workflow.md  observability.md  pydantic-schema.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: PROJECT_PACK.md
eval/baselines/: main.json
sentryrca/: config.py
sentryrca/observability/: __init__.py  tracing.py
sentryrca/schema/: __init__.py  rca.py  validate_examples.py
tests/schema/: test_rca.py  test_validate_examples.py
tests/unit/: test_config.py  test_tracing.py
