[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentryrca"
version = "0.1.0"
description = "Eval-driven, observable, multi-agent root cause analysis for production incidents"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
    "langfuse>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.103.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sentryrca"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PT", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["sentryrca"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "litellm.*",
    "sentence_transformers.*",
    "pgvector.*",
    "streamlit.*",
    "langgraph.*",
    "asyncpg.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sentryrca --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["sentryrca"]
omit = ["sentryrca/ui/*"]

[tool.coverage.report]
fail_under = 60
